# ptyme-track

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartBackground.sh
.github/workflows/: publish.yaml  tests.yaml  time_tracking.yaml  track_time.yaml
.ptyme_track/: .gitignore  JamesHutchison
ptyme_track/: cement.py  client.py  cur_times.py  git_ci_diff.py  main.py  ptyme_env.py  server.py  simple_file.py  time_blocks.py  validation.py
tests/: test_cement.py  test_client.py  test_time_blocks.py  test_validation.py
